@@ -1,3 +1,7 @@
+2015-05-08  gepr  <gepr@tempusdictum.com>
+
+	* parameters.json: Remove the seed to use System.currentTimeMillis().
+
 2015-05-07  gepr  <gepr@tempusdictum.com>
 
 	* parameters.json,batch.json: Rename batch.json back to parameters.json.
